# Chikyu-ga-nankai

./: Chikyu-ga-nankai.cabal  README.md
app/: Main.hs
src/: ChikyuGaNankai.hs
